--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>5.0.2.RELEASE</version>
 		</dependency>
+		<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-webmvc</artifactId>
+	<version>5.1.0.RELEASE</version>
+</dependency>
+<!-- Thanks for using https://jar-download.com -->
 		<!-- spring jdbc dependency -->
 		<dependency>
 			<groupId>org.springframework</groupId>
