--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,16 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>6.0.6</version>
 		</dependency>
+					<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <scope>provided</scope>
+		</dependency>
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-undertow</artifactId>
+	        <scope>provided</scope>
+	    </dependency>
 <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
